[package]
name = "sign_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
anyhow = "1.0"
hematite-nbt = { git = "https://github.com/PistonDevelopers/hematite_nbt" }
byteorder = "1.4"
indicatif = "0.16"
rayon = "1.5"